--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.application.name=product-service
 ######################################################################################
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
+# E?er Config Server yoksa bile çal??s?n
+spring.config.import=optional:configserver:
+
+server.port=5555
+
 ######################################################################################
 ### Relation Database ################################################################
 ### Database Config ##################################################################
